# numeric-optics-haskell

./: README.md  numeric-optics.cabal
app/: Iris.hs  Main.hs  Training.hs
src/Control/: Categories.hs
src/Numeric/: Optics.hs
src/Numeric/Optics/: Types.hs
src/Numeric/Optics/Base/: Accelerate.hs
src/Numeric/Optics/Base/Accelerate/: NeuralNetwork.hs
