cabal-version:       >=1.10
name:                numeric-optics
version:             0.1.0.0
license-file:        LICENSE
author:              statusfailed
maintainer:          sf@statusfailed.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:        Numeric.Optics
                        , Control.Categories
                        , Numeric.Optics.Types
                        , Numeric.Optics.Base.Accelerate
                        , Numeric.Optics.Base.Accelerate.NeuralNetwork
  build-depends:          base >=4.13 && <4.14
                        , ghc-prim >= 0.5.3
                        , accelerate >= 1.3.0.0
                        , accelerate-blas >= 0.3.0.0
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -O2
  extra-libraries: cblas

executable numeric-optics-demo
  main-is:                Main.hs
  hs-source-dirs:         app
  exposed-modules:        Main
  other-modules:          Iris, Training, Tests
  build-depends:          base >=4.13 && <4.14
                        , numeric-optics
                        , ghc-prim >= 0.5.3
                        , cassava >= 0.5.2.0
                        , bytestring >= 0.10.10.1
                        , accelerate >= 1.3.0.0
                        , accelerate-blas >= 0.3.0.0
                        , accelerate-llvm-native >= 1.3
                        , accelerate-llvm-ptx >= 1.3
                        , mwc-random-accelerate >= 0.2.0.0
                        , mwc-random >= 0.15.0.1
                        , random-shuffle
                        , MonadRandom
  default-language:     Haskell2010
  ghc-options:         -O2 -threaded
  extra-libraries: cblas
